style.css
body {
  background-color: #23B5D3;
  display: flex;
  justify-content: center;
  align-items: center; 
  height: 100vh; 
  color: #000000;
  font-family: 'Poppins', sans-serif
}

.outer-wrapper {
  width: 50%; 
  margin-bottom: 2vw;  
}

.est-info {
  text-align: center;
  font-size: 1.5vw;
  margin-top: 0vw;
}

.logo {
  width: 100%;
}

.main-heading {
  text-align: center;
  font-size: 1.85vw;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 2vw;
}

.main-container {
  text-align: center;
  display: flex;
  justify-content: center;
  margin-top: 2vw;
}

.contact-wrapper {
  position: relative;
  display: inline-block;
}

.contact-link {
  color: #FFFFFF;
  background-color: #EA526F;
  text-decoration: none;
  font-family: 'Montserrat', sans-serif;
  padding: 5px 0;
  letter-spacing: 5px;
}

.contact-link::before {
  content: "";
  width: 0;
  height: 0;
  border-bottom: 29px solid #EA526F;
  border-left: 29px solid transparent;
  position: relative;
  bottom: 24px;
  left: -29px;
}
.contact-link::after {
  content: "";
  width: 0;
  height: 0;
  border-top: 29px solid #EA526F;
  border-right: 29px solid transparent;
  position: relative;
  bottom: -24px;
  right: -29px;
}

@media screen and (max-width: 1200px) and (min-width: 900px) {
  .est-info {
    font-size: 1.5vw;
  }
}
@media screen and (max-width: 900px) {
  .outer-wrapper {
    width: 80%;
  }
  .est-info {
    font-size: 2.5vw;
  }
  .main-heading {
    font-size: 2.95vw;
    line-height: 3vw; 
  }
  .main-container {
    margin-top: 4vw;
  }
}

